--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ignore-glob",
   "main": "index.js",
   "scripts": {
-    "test": "ava --verbose --timeout=10s"
+    "test": "babel src --out-dir lib && ava --verbose --timeout=10s"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,17 @@
     "url": "https://github.com/kaelzhang/ignore-glob/issues"
   },
   "devDependencies": {
-    "ava": "^0.16.0"
+    "babel-cli": "^6.16.0",
+    "babel-plugin-syntax-trailing-function-commas": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.16.0",
+    "babel-plugin-transform-exponentiation-operator": "^6.8.0",
+    "babel-plugin-transform-inline-environment-variables": "^6.8.0",
+    "babel-plugin-transform-object-rest-spread": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0"
+  },
+  "dependencies": {
+    "glob": "^7.1.1",
+    "ignore": "^3.2.0",
+    "make-array": "^1.0.1"
   }
 }
